--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "dependencies": {
     "flow-bin": "^0.105.2",
+    "luxon": "^1.17.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
