--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "flow-bin": "^0.105.2",
     "luxon": "^1.17.2",
     "node-sass": "^4.12.0",
@@ -25,7 +26,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "http://localhost:1234",
   "browserslist": {
     "production": [
       ">0.2%",
