--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,21 @@
   },
   "dependencies": {
     "aws-sdk": "^2.517.0",
+    "bcrypt": "^3.0.6",
+    "dotenv": "^8.1.0",
+    "dynamoose": "^1.11.0",
     "express": "^4.17.1",
     "flow-bin": "^0.105.2",
     "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^1.17.2",
+    "morgan": "^1.9.1",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.1",
+    "@types/jsonwebtoken": "^8.4.3",
     "flow-remove-types": "^2.105.2"
   },
   "jest": {
@@ -23,10 +31,9 @@
   },
   "scripts": {
     "test": "mocha lib/test",
-    "build": "flow-remove-types src/ -d lib/",
-    "prepublish": "npm run build",
-    "flow": "flow",
-    "start": "node src/app.js"
+    "start": "npm run build:live",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts"
   },
   "repository": {
     "type": "git",
