--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.17.2",
     "morgan": "^1.9.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "express-jwt": "latest"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
-    "@types/jsonwebtoken": "^8.4.3",
+    "@types/express-jwt": "0.0.42",
+    "@types/jsonwebtoken": "^8.3.3",
     "flow-remove-types": "^2.105.2"
   },
   "jest": {
