--- a/backend/package.json
+++ b/backend/package.json
@@ -9,22 +9,26 @@
   "dependencies": {
     "aws-sdk": "^2.517.0",
     "bcrypt": "^3.0.6",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "dynamoose": "^1.11.0",
     "express": "^4.17.1",
+    "express-jwt": "latest",
     "flow-bin": "^0.105.2",
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.17.2",
     "morgan": "^1.9.1",
-    "uuid": "^3.3.3",
-    "express-jwt": "latest"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/express-jwt": "0.0.42",
     "@types/jsonwebtoken": "^8.3.3",
+    "@types/morgan": "^1.7.37",
     "flow-remove-types": "^2.105.2"
   },
   "jest": {
