--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "luxon": "^1.17.2",
     "morgan": "^1.9.1",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.6.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
