--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "luxon": "^1.17.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-datepicker": "^2.9.3",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
@@ -42,6 +43,7 @@
     "@types/luxon": "^1.15.2",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
+    "@types/react-datepicker": "^2.8.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
