Removed name as the id for Task and converted to a uuid and created another field for name. This was done because I realized you could update the name of a task because name was the primary key. I could obviously remove and re-add another field with the name I wanted but I thought this might work better in the future as well.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2",
-    "@fullcalendar/interaction": "latest"
+    "@fullcalendar/interaction": "latest",
+    "uuidv4": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
