--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/luxon": "^1.3.11",
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/interaction": "latest",
     "@fullcalendar/react": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/pickers": "^3.2.8",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
-    "luxon": "^1.17.2",
+    "luxon": "^1.21.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-datepicker": "^2.9.3",
